syntax = "proto3";

package littlehorse;

import "google/protobuf/timestamp.proto";
import "common_enums.proto";
import "variable.proto";
import "object_id.proto";
import "user_tasks.proto";

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.sdk.common.proto";
option csharp_namespace = "LittleHorse.Common.Proto";

message TaskRun {
  TaskRunId id = 1;
  TaskDefId task_def_id = 2;

  repeated TaskAttempt attempts = 3;
  int32 max_attempts = 4;
  repeated VarNameAndVal input_variables = 5;

  TaskRunSource source = 6;
  google.protobuf.Timestamp scheduled_at = 7;

  TaskStatus status = 8;
  int32 timeout_seconds = 9;
}

message VarNameAndVal {
  string var_name = 1;
  VariableValue value = 2;
}

message TaskAttempt {
  optional VariableValue log_output = 2;

  optional google.protobuf.Timestamp schedule_time = 3;
  optional google.protobuf.Timestamp start_time = 4;
  optional google.protobuf.Timestamp end_time = 5;
  string task_worker_id = 7;
  optional string task_worker_version = 8;

  TaskStatus status = 9;

  oneof result {
    VariableValue output = 1;
    LHTaskError error = 10;
    LHTaskException exception = 11;
  }
}

message TaskRunSource {
  oneof task_run_source {
    TaskNodeReference task_node = 1;
    UserTaskTriggerReference user_task_trigger = 2;
  }
  optional WfSpecId wf_spec_id = 3;
}

message TaskNodeReference {
  NodeRunId node_run_id = 1;
}

message LHTaskError {
  LHErrorType type = 1;
  string message = 2;
}

message LHTaskException {
  string name = 1;
  string message = 2;
}
